--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
+    "grade-js": "^1.0.10",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.1.0",
     "json-loader": "^0.5.7",
@@ -57,6 +58,7 @@
     "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
     "memory-fs": "^0.4.1",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.13",
     "postcss-loader": "^2.1.3",
     "rimraf": "^2.6.2",
