添加登录 分类 点赞功能

--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
     "babel-preset-env": "^1.6.1",
+    "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "browserslist": "^3.2.4",
     "chokidar": "^2.0.3",
+    "clipboard": "^2.0.0",
     "compression": "^1.7.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
@@ -42,6 +45,7 @@
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -49,6 +53,7 @@
     "grade-js": "^1.0.10",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.1.0",
+    "js-cookie": "^2.2.0",
     "json-loader": "^0.5.7",
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
@@ -67,6 +72,7 @@
     "style-loader": "^0.20.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "toastr": "^2.1.4",
     "underscore": "^1.8.3",
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
