--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
+    "start": "cross-env NODE_ENV=production pm2 start ./bin/processes.json",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "dayjs": "^1.6.4",
     "es6-promise": "^4.2.4",
     "eslint": "^4.19.1",
     "eslint-config-lcy-vue": "^2.1.3",
@@ -63,7 +64,6 @@
     "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
     "memory-fs": "^0.4.1",
-    "moment": "^2.22.1",
     "mongoose": "^5.0.13",
     "postcss-loader": "^2.1.3",
     "rimraf": "^2.6.2",
