添加前端资源配置，添加标签

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.0-beta.1",
+    "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vue-style-loader": "^4.1.0",
